# ai-data-analyst-copilot

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
core/: anomaly_detector.py  data_loader.py  data_quality.py  insight_engine.py  profiler.py  qa_engine.py  semantic_roles.py
data/: sample_data.csv  test_duplicates.csv  test_many_unique.csv  test_no_numeric.csv  test_outlier.csv
pages/: 01_overview.py  02_insights.py  03_qa.py  04_anomalies.py  05_summary.py
shared/: llm_client.py  prompts.py
src/: data_profile.py
