[project]
name = "ai-data-analyst-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.86.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "streamlit>=1.55.0",
]
